# Capstone

./: README.md
- Old Branches/EricGrandizio-dev-Alt/: .gitignore  README.md
- Old Branches/EricGrandizio-dev-Alt/.github/ISSUE_TEMPLATE/: task-template.md
- Old Branches/EricGrandizio-dev-Alt/coverage/: Cargo.toml
- Old Branches/EricGrandizio-dev-Alt/coverage/pre-generated/: coverage-details.html  coverage-report.txt
- Old Branches/EricGrandizio-dev-Alt/dev-docs/: Code Coverage.md  Dependencies.md
- Old Branches/EricGrandizio-dev-Alt/gui-sys/: Cargo.toml
- Old Branches/EricGrandizio-dev-Alt/rge/: Cargo.toml
- Old Branches/EricGrandizio-dev-Alt/rge/src/: lib.rs
- Old Branches/EricGrandizio-dev-Alt/wyn/: Cargo.toml
- Old Branches/EricGrandizio-dev-Alt/wyn/examples/: example.rs  template_multi.rs  template_single.rs
- Old Branches/EricGrandizio-dev-Alt/wyn/examples/utils/: rwopt.rs
- Old Branches/EricGrandizio-dev-Alt/wyn/src/cocoa/: events.rs  inputs.rs  mod.rs  screen.rs  types.rs  window.rs
- Old Branches/EricGrandizio-dev-Alt/wyn/src/common/: types.rs
- Old Branches/EricGrandizio-dev-Alt/wyn/src/win32/: event_data.rs  event_loop.rs  events.rs  inputs.rs  window.rs
- Old Branches/EricGrandizio-dev-Alt/wyn/src/x11/: event_loop.rs  event_utils.rs  events.rs  log.rs  mod.rs  window.rs
- Old Branches/EricGrandizio-dev-Alt/wyn/tests/: execute.rs  execute_modal.rs  open_close.rs  rename.rs  screen_info.rs  user_rename.rs
- Old Branches/EricGrandizio-dev-Alt/wyn/tests/utils/: mod.rs  rwopt.rs  timeout.rs
- Old Branches/EricGrandizio-dev-M2/: .gitignore  Cargo.toml
- Old Branches/EricGrandizio-dev-M2/dev-docs/: Rust Docs.md  System Architecture.md
- Old Branches/EricGrandizio-dev-M2/rge/: Cargo.toml
- Old Branches/EricGrandizio-dev-M2/rge/examples/utils/: mod.rs
- Old Branches/EricGrandizio-dev-M2/rge/src/: inputs.rs
- Old Branches/EricGrandizio-dev-M2/rge/src/vulkan/: mod.rs
- Old Branches/EricGrandizio-dev-M2/rge/src/vulkan/context/: instance.rs
- Old Branches/EricGrandizio-dev-M2/rge/src/vulkan/renderable/: device.rs  device_exts.rs  surface.rs  swapchain.rs
- Old Branches/EricGrandizio-dev-M2/rge/src/vulkan/shaders/: atlas.rs  buffers.rs  descriptors.rs  glsl.rs  memory.rs  mod.rs  pipeline_layout.rs
- Old Branches/EricGrandizio-dev-M2/rge/src/vulkan/shaders/glsl_shaders/: rgba.rs  uv.rs
- Old Branches/EricGrandizio-dev-M2/rge/src/vulkan/shaders/glsl_shaders/rgba/: shader.vert
- Old Branches/EricGrandizio-dev-M2/rge/src/vulkan/shaders/glsl_shaders/uv/: shader.frag  shader.vert
- Old Branches/EricGrandizio-dev-M2/rge/src/vulkan/utils/: arrays.rs  extensions.rs  nt_string.rs
- Old Branches/EricGrandizio-dev-M2/rge/tests/: game-of-life.rs  shapes.rs  space.rs  textures.rs  vsync.rs
- Old Branches/EricGrandizio-dev-M2/wyn/: Cargo.toml
- Old Branches/EricGrandizio-dev-M2/wyn/examples/: template_single.rs
- Old Branches/EricGrandizio-dev-M2/wyn/examples/utils/: mod.rs
- Old Branches/EricGrandizio-dev-M2/wyn/src/common/: nonzero.rs  types.rs
- Old Branches/EricGrandizio-dev-M2/wyn/src/win32/: errors.rs  event_data.rs  inputs.rs  mod.rs
- Old Branches/EricGrandizio-dev-M2/wyn/tests/: errors.rs  min_max.rs  reposition.rs
- Old Branches/EricGrandizio-main/: .gitignore  README.md
- Old Branches/EricGrandizio-main/coverage/: Cargo.toml
- Old Branches/EricGrandizio-main/dev-docs/: Dependencies.md
- Old Branches/EricGrandizio-main/gui-sys/: Cargo.toml
- Old Branches/EricGrandizio-main/rge/: Cargo.toml
- Old Branches/EricGrandizio-main/rge/examples/: example.rs
- Old Branches/EricGrandizio-main/rge/src/: engine.rs  lib.rs  settings.rs  texture.rs  timer.rs
- Old Branches/EricGrandizio-main/rge/src/vulkan/: mod.rs  render.rs
- Old Branches/EricGrandizio-main/rge/src/vulkan/context/: debug_messenger.rs  instance_exts.rs  mod.rs  physical_device.rs
- Old Branches/EricGrandizio-main/rge/src/vulkan/renderable/: device_selection.rs  frames.rs  logical_device.rs  mod.rs  sync.rs
- Old Branches/EricGrandizio-main/rge/src/vulkan/shaders/: buffers.rs  command_pool.rs  glsl.rs  graphics_pipelines.rs  memory.rs  mod.rs  pipeline_layout.rs  pipelines.rs  render_pass.rs  shader.rs  sources.rs
- Old Branches/EricGrandizio-main/rge/src/vulkan/shaders/glsl/: shader.frag  shader.vert
- Old Branches/EricGrandizio-main/rge/src/vulkan/utils/: mod.rs  nt_string.rs
- Old Branches/EricGrandizio-main/rge/tests/: glsl.rs  image.rs  shapes.rs
- Old Branches/EricGrandizio-main/rge/tests/utils/: mod.rs
coverage/pre-generated/: lcov.info
coverage/src/: main.rs
dev-docs/: Attributions.md  Code Coverage.md
gui-sys/: Cargo.toml
gui-sys/src/linux/: mod.rs  xcb.rs
gui-sys/src/macos/: objc.rs
gui-sys/src/windows/: mod.rs
rge/examples/: example.rs  fireflies.rs
rge/examples/utils/: math.rs
rge/src/: engine.rs  lib.rs  settings.rs  texture.rs  timer.rs
rge/src/vulkan/: render.rs
rge/tests/: glsl.rs  images.rs  timing.rs
rge/tests/utils/: math.rs  mod.rs
wyn/src/cocoa/: event_loop.rs
wyn/src/common/: mod.rs
wyn/src/win32/: event_loop.rs  screen.rs  types.rs  window.rs
wyn/src/x11/: errors.rs  inputs.rs  screen.rs  types.rs
wyn/tests/: execute.rs  gamepad_info.rs  kbm_info.rs  style_change.rs  window_info.rs
(+48 files in other folders)
