[package]
name = "gui-sys"
version = "0.1.0"
edition = "2021"

# ================================================================ #
[target.'cfg(target_os = "windows")'.dependencies]
# ---------------------------------------------------------------- #

# Rust Bindings for the Windows API.
# Crates.io Page: https://crates.io/crates/windows-sys
windows-sys = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_XboxController",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_Media",
] }

# ================================================================ #
[target.'cfg(target_os = "linux")'.dependencies]
# ---------------------------------------------------------------- #

# Rust Bindings for the XCB Library.
# Crates.io Page: https://crates.io/crates/xcb-sys
xcb-sys = { version = "0.2.1", features = ["randr", "icccm", "ewmh"] }

# ================================================================ #
[target.'cfg(target_os = "macos")'.dependencies]
# ---------------------------------------------------------------- #

# Rust Bindings for the Objective-C Runtime.
# Crates.io Page: https://crates.io/crates/objc
objc = { version = "0.2.7", features = ["exception"] }

# Rust Bindings for the Cocoa Framework.
# Crates.io Page: https://crates.io/crates/cocoa
cocoa = "0.24.1"

# ================================================================ #
[dependencies]
# ---------------------------------------------------------------- #

# Rust Bindings for the C Standard/OS Libraries.
# Crates.io Page: https://crates.io/crates/libc
libc = "0.2.140"

# Helper Macro for #[cfg] statements.
# Crates.io Page: https://crates.io/crates/cfg-if
cfg-if = "1.0.0"

# ================================================================ #
